# pyqudit

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  gates.rst  index.rst  main.rst  other.rst  pauli.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  gates.doctree  index.doctree  main.doctree  other.doctree  pauli.doctree
docs/_build/html/: .buildinfo  gates.html  genindex.html  index.html  main.html  objects.inv  other.html  pauli.html  search.html  searchindex.js
docs/_build/html/_sources/: gates.rst.txt  index.rst.txt  main.rst.txt  other.rst.txt  pauli.rst.txt
pyqudit/: __init__.py  __main__.py  qudit.py
