[metadata]

name = pyqudit
version = 0.0.4
author = The Quanteam
author_email = orodaux@student.sfit.ac.in
description = Test package of Qudit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ordoptimus/pyqudit
project_urls =
  Bug Tracker = https://github.com/ordoptimus/pyqudit/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =pyqudit
python_requires = >=3.6

[options.packages.find]
where = pyqudit
