[metadata]

name = pyqudit
version = 0.0.6
author = Ordoptimus, Rutuja343, kimyona-crypt
author_email = orodaux@gmail.com
description = Quantum Computing package. Use qudit gates and build simple N-D circuits.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ordoptimus/pyqudit
project_urls =
  Bug Tracker = https://github.com/ordoptimus/pyqudit/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =pyqudit
python_requires = >=3.6

[options.packages.find]
where = pyqudit
